k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onboarding-service
  namespace: camunda-demos
spec:
  selector:
    app: camunda-8-example-customer-onboarding
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
